Fixed centered text not centered when wrapping. Added guide outline to diamond shape when selected.

--- a/src/styles/node-styles.scss
+++ b/src/styles/node-styles.scss
@@ -34,7 +34,10 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+
+        min-height: 0 !important;
+
+        text-align: center;
       }
     }
   }
@@ -64,6 +67,12 @@
     // https://yoksel.github.io/url-encoder/ - assets/diamond-shape.svg
     $mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 141.42135624 141.42135624' preserveAspectRatio='none'%3E%3Cstyle%3E rect %7B transform-origin: center; transform: rotate(45deg) scale(1.05); %7D %3C/style%3E%3Crect rx='8' x='20.71067812' y='20.71067812' width='100' height='100' /%3E%3C/svg%3E");
   
+    &.is-focused, &.is-selected {
+      border-radius: var(--radius-m);
+      outline: 2px solid var(--color-accent);
+      outline-offset: 5px;
+    }
+
     .canvas-node-container {
       border: none;
       box-shadow: none !important;
